# md-shelf

./: docker-compose.yml
backend/: .gitignore  Cargo.toml  summary.json
backend/.devcontainer/: devcontainer.json
backend/src/: main.rs
backend/src/features/: mod.rs
backend/src/features/articles/: route.rs  service.rs
backend/src/features/shelfs/: model.rs  route.rs  service.rs
backend/src/features/summary/: service.rs
front/: index.html  package-lock.json  package.json  vite.config.ts
front/.devcontainer/: devcontainer.json
front/public/: actix-web-module-structure.md
front/src/: Router.tsx  demo.json  main.tsx  types.ts  utils.ts
front/src/components/: ArticleItem.tsx  ArticleList.tsx  MarkdownViewer.tsx
front/src/hooks/: useScrollRestoration.ts  useShelfData.ts
front/src/layouts/: BaseLayout.tsx
front/src/pages/: Article.tsx  Shelf.tsx
