[package]
name = "md-shelf-bg"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
actix-web-lab = { version = "0.24.2", features = ["spa"]}
actix-rt = "2.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
pulldown-cmark = "0.13.0"
tokio = { version = "1.46.1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
get-size = "0.1"
get-size-derive = "0.1"
